--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.13.1",
+    "siwe": "^2.3.2",
     "tailwindcss": "^3.4.8"
   }
 }
