--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^5.1.0",
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+    "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "astro": "^4.13.1",
+    "buffer": "^6.0.3",
     "siwe": "^2.3.2",
     "tailwindcss": "^3.4.8"
   }
